--- a/app/playground/houses_analysis.ipynb
+++ b/app/playground/houses_analysis.ipynb
@@ -4957,45 +4957,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Any\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score, mean_absolute_percentage_error\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.base import BaseEstimator\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.metrics import (\n",
+    "    mean_absolute_error, \n",
+    "    mean_squared_error, \n",
+    "    r2_score, \n",
+    "    mean_absolute_percentage_error,\n",
+    "    make_scorer\n",
+    ")\n",
     "\n",
     "def get_metrics(y_test: pd.Series, y_pred: np.ndarray) -> None:\n",
     "    mae = mean_absolute_error(y_test, y_pred)\n",
-    "    mse = mean_squared_error(y_test, y_pred),\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
     "    r2 = r2_score(y_test, y_pred)\n",
     "    mape = mean_absolute_percentage_error(y_test, y_pred)\n",
-    "\n",
+    "    \n",
     "    print(f\"MAE {round(mae, 2)}\")\n",
-    "    print(f\"MSE {mse}\")\n",
+    "    print(f\"MSE {round(mse, 2)}\")\n",
     "    print(f\"R2 {round(r2, 2)}\")\n",
     "    print(f\"MAPE {round(mape, 2)}\")\n",
     "\n",
-    "\n",
-    "def train_model(model: Any) -> None:\n",
-    "    model = model()\n",
-    "    model.fit(X_train, y_train)\n",
+    "def train_model(model: type[BaseEstimator]) -> None:\n",
+    "    # Instanciar el modelo\n",
+    "    model_instance = model()\n",
     "    \n",
-    "    y_pred = model.predict(X_test)\n",
-    "\n",
+    "    # Validación cruzada ANTES del entrenamiento final\n",
+    "    print(\"=== VALIDACIÓN CRUZADA ===\")\n",
+    "    scorers = {\n",
+    "        'MAE': 'neg_mean_absolute_error',\n",
+    "        'MSE': 'neg_mean_squared_error', \n",
+    "        'R2': 'r2',\n",
+    "        'MAPE': make_scorer(mean_absolute_percentage_error, greater_is_better=False)\n",
+    "    }\n",
+    "    \n",
+    "    cv_results = cross_validate(\n",
+    "        model_instance, X_train, y_train,\n",
+    "        cv=5,\n",
+    "        scoring=scorers\n",
+    "    )\n",
+    "    \n",
+    "    # Mostrar métricas de CV\n",
+    "    for metric_name, scores in cv_results.items():\n",
+    "        if metric_name.startswith('test_'):\n",
+    "            clean_name = metric_name.replace('test_', '')\n",
+    "            if clean_name in ['MAE', 'MSE', 'MAPE']:\n",
+    "                cv_scores = -scores  # Convertir a positivo\n",
+    "            else:\n",
+    "                cv_scores = scores\n",
+    "            mean_score = np.mean(cv_scores)\n",
+    "            std_score = np.std(cv_scores)\n",
+    "            print(f\"CV {clean_name}: {round(mean_score, 2)} (+/- {round(std_score * 2, 2)})\")\n",
+    "    \n",
+    "    print(\"\\n=== MÉTRICAS EN TEST SET ===\")\n",
+    "    \n",
+    "    # Tu lógica original\n",
+    "    model_instance.fit(X_train, y_train)\n",
+    "    y_pred = model_instance.predict(X_test)\n",
+    "    \n",
     "    return get_metrics(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 21439.42 (+/- 3234.88)\n",
+      "CV MSE: 1358194261.63 (+/- 1205650952.89)\n",
+      "CV R2: 0.78 (+/- 0.13)\n",
+      "CV MAPE: 0.12 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 20836.39\n",
-      "MSE (1252824869.3625076,)\n",
+      "MSE 1252824869.36\n",
       "R2 0.84\n",
       "MAPE 0.13\n"
      ]
@@ -5009,7 +5055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -5017,14 +5063,28 @@
      "output_type": "stream",
      "text": [
       "*****Elasticnet*****\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 23102.95 (+/- 3484.19)\n",
+      "CV MSE: 1600429385.8 (+/- 1617007214.27)\n",
+      "CV R2: 0.74 (+/- 0.18)\n",
+      "CV MAPE: 0.13 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 23859.52\n",
-      "MSE (1619284710.3019397,)\n",
+      "MSE 1619284710.3\n",
       "R2 0.79\n",
       "MAPE 0.14\n",
       "\n",
       "****ElasticNetCV*****\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 36221.8 (+/- 3396.23)\n",
+      "CV MSE: 2754664315.92 (+/- 1629959362.62)\n",
+      "CV R2: 0.54 (+/- 0.15)\n",
+      "CV MAPE: 0.21 (+/- 0.03)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 35454.21\n",
-      "MSE (3012113943.46489,)\n",
+      "MSE 3012113943.46\n",
       "R2 0.61\n",
       "MAPE 0.21\n"
      ]
@@ -5042,7 +5102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -5050,14 +5110,28 @@
      "output_type": "stream",
      "text": [
       "*****Lasso*****\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 21432.35 (+/- 3238.27)\n",
+      "CV MSE: 1357644303.63 (+/- 1206140567.87)\n",
+      "CV R2: 0.78 (+/- 0.13)\n",
+      "CV MAPE: 0.12 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 20832.51\n",
-      "MSE (1252507565.6614645,)\n",
+      "MSE 1252507565.66\n",
       "R2 0.84\n",
       "MAPE 0.13\n",
       "\n",
       "****LassoCV*****\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 30088.89 (+/- 2724.31)\n",
+      "CV MSE: 2218333815.6 (+/- 1800848388.94)\n",
+      "CV R2: 0.64 (+/- 0.2)\n",
+      "CV MAPE: 0.17 (+/- 0.01)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 28904.8\n",
-      "MSE (2288434795.716385,)\n",
+      "MSE 2288434795.72\n",
       "R2 0.7\n",
       "MAPE 0.17\n"
      ]
@@ -5075,7 +5149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -5083,34 +5157,43 @@
      "output_type": "stream",
      "text": [
       "*****ARDRegression*****\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 21859.55 (+/- 3304.69)\n",
+      "CV MSE: 1379543850.17 (+/- 1291285663.37)\n",
+      "CV R2: 0.78 (+/- 0.15)\n",
+      "CV MAPE: 0.13 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 21078.83\n",
-      "MSE (1283279801.2144754,)\n",
+      "MSE 1283279801.21\n",
       "R2 0.83\n",
       "MAPE 0.13\n",
       "\n",
       "****GammaRegressor*****\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 27054.01 (+/- 8522.9)\n",
+      "CV MSE: 6985124445.81 (+/- 21357454316.7)\n",
+      "CV R2: -0.02 (+/- 2.88)\n",
+      "CV MAPE: 0.16 (+/- 0.06)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 27365.92\n",
-      "MSE (1751958335.1556864,)\n",
+      "MSE 1751958335.16\n",
       "R2 0.77\n",
       "MAPE 0.17\n",
       "\n",
       "****HuberRegressor*****\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 34784.26 (+/- 4365.25)\n",
+      "CV MSE: 3739632640.64 (+/- 4754018003.21)\n",
+      "CV R2: 0.34 (+/- 0.99)\n",
+      "CV MAPE: 0.2 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 31439.63\n",
-      "MSE (2554345373.114323,)\n",
+      "MSE 2554345373.11\n",
       "R2 0.67\n",
       "MAPE 0.19\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tomas/.local/share/virtualenvs/housing-prices-c66B3Hdg/lib/python3.12/site-packages/sklearn/linear_model/_glm/glm.py:285: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res)\n"
      ]
     }
    ],
@@ -5129,7 +5212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -5137,32 +5220,67 @@
      "output_type": "stream",
      "text": [
       "*****RandomForestRegressor*****\n",
-      "MAE 18839.12\n",
-      "MSE (952377560.0767304,)\n",
-      "R2 0.88\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 18666.01 (+/- 3688.49)\n",
+      "CV MSE: 1022141440.03 (+/- 573843501.5)\n",
+      "CV R2: 0.83 (+/- 0.09)\n",
+      "CV MAPE: 0.11 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
+      "MAE 18695.57\n",
+      "MSE 1001176620.81\n",
+      "R2 0.87\n",
       "MAPE 0.11\n",
       "\n",
       "*****GradientBoostingRegressor*****\n",
-      "MAE 18885.86\n",
-      "MSE (873192212.4540213,)\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 17935.64 (+/- 2143.38)\n",
+      "CV MSE: 902463392.8 (+/- 468944390.74)\n",
+      "CV R2: 0.85 (+/- 0.06)\n",
+      "CV MAPE: 0.1 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
+      "MAE 18778.23\n",
+      "MSE 853367070.82\n",
       "R2 0.89\n",
       "MAPE 0.11\n",
       "\n",
       "*****ExtraTreesRegressor*****\n",
-      "MAE 17346.12\n",
-      "MSE (692178094.7576743,)\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 18547.02 (+/- 3319.68)\n",
+      "CV MSE: 902793901.39 (+/- 547938328.23)\n",
+      "CV R2: 0.85 (+/- 0.05)\n",
+      "CV MAPE: 0.11 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
+      "MAE 17376.54\n",
+      "MSE 716489775.88\n",
       "R2 0.91\n",
       "MAPE 0.11\n",
       "\n",
       "*****AdaBoostRegressor*****\n",
-      "MAE 24470.2\n",
-      "MSE (1189288057.187799,)\n",
-      "R2 0.84\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 23982.38 (+/- 3165.06)\n",
+      "CV MSE: 1272531701.16 (+/- 508254780.17)\n",
+      "CV R2: 0.79 (+/- 0.05)\n",
+      "CV MAPE: 0.15 (+/- 0.04)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
+      "MAE 24762.21\n",
+      "MSE 1268478781.64\n",
+      "R2 0.83\n",
       "MAPE 0.18\n",
       "\n",
       "*****BaggingRegressor*****\n",
-      "MAE 19150.18\n",
-      "MSE (981064407.367089,)\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 20237.84 (+/- 2450.63)\n",
+      "CV MSE: 1235591694.48 (+/- 582263743.71)\n",
+      "CV R2: 0.79 (+/- 0.07)\n",
+      "CV MAPE: 0.12 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
+      "MAE 19438.76\n",
+      "MSE 984542633.46\n",
       "R2 0.87\n",
       "MAPE 0.12\n",
       "\n"
@@ -5197,7 +5315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -5205,21 +5323,42 @@
      "output_type": "stream",
      "text": [
       "*****SVR*****\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 54606.53 (+/- 4970.5)\n",
+      "CV MSE: 6242992833.77 (+/- 1706714773.02)\n",
+      "CV R2: -0.05 (+/- 0.07)\n",
+      "CV MAPE: 0.31 (+/- 0.06)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 59555.59\n",
-      "MSE (7858962887.936523,)\n",
+      "MSE 7858962887.94\n",
       "R2 -0.02\n",
       "MAPE 0.36\n",
       "\n",
       "*****KNeighborsRegressor*****\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 34485.66 (+/- 4002.39)\n",
+      "CV MSE: 2537104654.94 (+/- 1005788930.89)\n",
+      "CV R2: 0.57 (+/- 0.08)\n",
+      "CV MAPE: 0.2 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
       "MAE 33549.65\n",
-      "MSE (2794671679.0565753,)\n",
+      "MSE 2794671679.06\n",
       "R2 0.64\n",
       "MAPE 0.2\n",
       "\n",
       "*****DecisionTreeRegressor*****\n",
-      "MAE 23759.01\n",
-      "MSE (1102526699.3527398,)\n",
-      "R2 0.86\n",
+      "=== VALIDACIÓN CRUZADA ===\n",
+      "CV MAE: 26834.87 (+/- 3964.69)\n",
+      "CV MSE: 2039675980.38 (+/- 1197865439.04)\n",
+      "CV R2: 0.66 (+/- 0.21)\n",
+      "CV MAPE: 0.15 (+/- 0.02)\n",
+      "\n",
+      "=== MÉTRICAS EN TEST SET ===\n",
+      "MAE 24039.22\n",
+      "MSE 1157528387.86\n",
+      "R2 0.85\n",
       "MAPE 0.15\n",
       "\n"
      ]
@@ -5240,6 +5379,53 @@
     "train_model(DecisionTreeRegressor)\n",
     "print(\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mejores parámetros:\n",
+      "{'criterion': 'absolute_error', 'max_depth': 7, 'min_samples_leaf': 1, 'min_samples_split': 10}\n",
+      "\n",
+      "Mejor MAPE: 0.137 (13.7%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import make_scorer\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = {\n",
+    "    'max_depth': [3, 5, 7, 10, None],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 2, 5],\n",
+    "    'criterion': ['squared_error', 'absolute_error']\n",
+    "}\n",
+    "\n",
+    "# GridSearch\n",
+    "dt = DecisionTreeRegressor(random_state=42)\n",
+    "mape_scorer = make_scorer(mean_absolute_percentage_error, greater_is_better=False)\n",
+    "grid = GridSearchCV(dt, param_grid, cv=3, scoring=mape_scorer, n_jobs=-1)\n",
+    "\n",
+    "grid.fit(X, y)\n",
+    "\n",
+    "#  Resultados\n",
+    "print(\"Mejores parámetros:\")\n",
+    "print(grid.best_params_)\n",
+    "print(f\"\\nMejor MAPE: {-grid.best_score_:.3f} ({-grid.best_score_*100:.1f}%)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
